hphp/test/zend/good/ext/gd/tests/bug45799.php.expectf

Warning: gd-png error: no colors in palette in %s/bug45799.php on line 3
